--- a/index.html
+++ b/index.html
@@ -20,22 +20,20 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>Narayan Indian Restaurant</h1>
-            </a>
+            <a href="index.html"><h1>Narayan Restaurant</h1></a>
             <p>
             <img src="images/star-k-logo.png" alt="ISO Certification">
             <span>ISO Certified</span>
             </p>
           </div>
-        </div>
 
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>        
-      </div>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
           <ul id="nav-list" class="nav navbar-nav navbar-right">
@@ -53,13 +51,27 @@
             </li>
             <li id="phone" class="hidden-xs">
               <a href=tel:0721455050>
-                <span>0721455050</span></a><div>* We Deliver</div>
+                <span>0721-000-000</span></a><div>* We Deliver</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
       </div><!-- .container -->
     </nav><!-- #header-nav -->
   </header>
+
+  <div id="call-btn" class="visible-xs">
+    <a class="btn" href="tel:410-602-5008">
+    <span class="glyphicon glyphicon-earphone"></span>
+    410-602-5008
+    </a>
+  </div>
+  <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
+
+  <div id="main-content" class="container">
+    <div class="jumbotron">
+      <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
+    </div>
+ </div>
 
 
 
