--- a/index.html
+++ b/index.html
@@ -71,7 +71,24 @@
     <div class="jumbotron">
       <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
     </div>
- </div>
+
+    <div id="home-tiles" class="row">
+      <div class="col-md-4 col-sm-6 col-xs-12">
+       <a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
+      </div>
+      <div class="col-md-4 col-sm-6 col-xs-12">
+       <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
+      </div>
+      <div class="col-md-4 col-sm-12 col-xs-12">
+       <a href="https://goo.gl/maps/CpUu3mykkScPqt3w6" target="_blank">
+         <div id="map-tile">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14420.325797295793!2d85.52554963086953!3d25.368586591066332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f286692bcb0d93%3A0xa95dbe639db60e43!2sHarnaut%2C%20Bihar%20803110%2C%20India!5e0!3m2!1sen!2sro!4v1618592830401!5m2!1sen!2sro" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <span>map</span>
+         </div>
+       </a>
+     </div>
+    </div>
+  </div>
 
 
 
