--- a/index.html
+++ b/index.html
@@ -80,16 +80,41 @@
        <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
-       <a href="https://goo.gl/maps/CpUu3mykkScPqt3w6" target="_blank">
+        <a href="https://goo.gl/maps/CpUu3mykkScPqt3w6" target="_blank">
          <div id="map-tile">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14420.325797295793!2d85.52554963086953!3d25.368586591066332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f286692bcb0d93%3A0xa95dbe639db60e43!2sHarnaut%2C%20Bihar%20803110%2C%20India!5e0!3m2!1sen!2sro!4v1618592830401!5m2!1sen!2sro" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           <span>map</span>
          </div>
-       </a>
-     </div>
-    </div>
-  </div>
+        </a>
+      </div>
+    </div><!--End of home-tiles-->
+  </div><!--End of main content-->
 
+  <footer class="panel-footer">
+    <div class="container">
+      <div class="row">
+        <section id="hours" class="col-sm-4">
+          <span>Hours:</span><br>
+          Sun-Thurs: 11:15am - 10:00pm<br>
+          Fri: 11:15am - 2:30pm<br>
+          Saturday Closed
+          <hr class="visible-xs"> <!--line separator-->
+        </section>
+        <section id="address" class="col-sm-4">
+          <span>Address:</span><br>
+          9G9H+MH Harnaut<br>
+          Bihar, India
+          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          <hr class="visible-xs">
+        </section>
+        <section id="testimonials" class="col-sm-4">
+          <p>"The best Indian restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+          <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+        </section>
+      </div>
+      <div class="text-center">&copy; Copyright Neha's Restaurant 2021</div>
+    </div>
+  </footer>
 
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
